update component logic

--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -144,13 +144,15 @@
     }
 
     code {
+        display: inline-block;
         font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
         background-color: rgba(var(--color-base-background-1), 1.0);
         padding: 6px 12px;
         font-weight: bold;
-        font-size: 105%;
+        font-size: 85%;
         color: rgba(var(--color-base-text), 1.0);
         border-radius: 6px;
+        background-color: rgba(0, 0, 0, .1);
     }
 
 /* ######################################
